# otus-cpp-basic-project-work

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  reminder.cpp  reminder.hpp
googletest_prebuild/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: iinteraction.hpp  interaction.cpp  interaction.hpp  main.cpp  reminder.cpp  reminder.hpp  storage.cpp  storage.hpp
test/: test_interaction.cpp
